--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,7 @@
-<table class = "table">
-    <thead>
-        <th>Nome</th>
-    </thead>
-    <tbody>
-        <td>Ricarth</td>
-    </tbody>
-</table>
+<%= render "shared/navbar" %>
+<%= render "shared/cabecalho" %>
+<%= render "shared/info_basica" %>
+<%= render "shared/historico_profissional" %>
+<%= render "shared/formacao_academica" %>
+<%= render "shared/idiomas" %>
+<%= render "shared/footer" %>
