corrigido bug de tela

--- a/app/views/shared/_idiomas.html.erb
+++ b/app/views/shared/_idiomas.html.erb
@@ -20,7 +20,7 @@
                 <td>Razoavelmente</td>
             </tr>
             <tr>
-                <td>Espalho</td>
+                <td>Espanhol</td>
                 <td>Pouco</td>
                 <td>Pouco</td>
                 <td>Pouco</td>
