--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,3 +36,14 @@ div.footer{
     color: #FFFFFF;
     font-size: small;
 }
+
+img.imagem-logo{
+    max-height: 76px;
+    width: auto;
+    height: auto;
+}
+
+div.justificado{
+    text-align: justify;
+    text-justify: inter-word;
+}
