--- a/app/views/magnero/index.html.erb
+++ b/app/views/magnero/index.html.erb
@@ -18,6 +18,8 @@
     
 </div>
 
+<%= render "bom" %>
+
 <%= render "shared/historico_profissional" %>
 <%= render "shared/formacao_academica" %>
 <%= render "shared/idiomas" %>
