--- a/app/views/shared/_info_basica.html.erb
+++ b/app/views/shared/_info_basica.html.erb
@@ -1,9 +1,9 @@
-<div class = "secao">
+<div class = "secao" id = "info">
     <h2>O que é o mínimo que você precisa saber?</h2>
 </div>
 
 <ul class="list-group">
-    <li class = "list-group-item"><strong>Ricarth Ruan da Silva Lima</strong><br/></li>
+    <li class = "list-group-item"><strong>Nome:</strong> Ricarth Ruan da Silva Lima<br/></li>
     <li class = "list-group-item"><strong>Sistemas de Informação - CIn (UFPE)</strong> - 5º Período<br/></li>
     <li class = "list-group-item"><strong>Pernambuco</strong><br/></li>
     <li class = "list-group-item"><strong>E-mail:</strong> <a href = "mailto:rrsl@cin.ufpe.br">rrsl@cin.ufpe.br</a><br/></li>
