--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,22 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Site Acadêmico</a>
+          <a class="nav-link" href="#info">Informações</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#profissional">Profissional</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#academica">Acadêmico</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#idiomas">Idiomas</a>
+        </li>
+      </ul>
+      
+      <ul class = "navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Site Acadêmico</a>
         </li>
       </ul>
     </div>
