adicionado pagina para justa

--- a/app/views/shared/_idiomas.html.erb
+++ b/app/views/shared/_idiomas.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class = "texto">
-    <table class = "table">
+    <table class = "table table-responsive-lg">
         <thead>
             <th>Idioma</th>
             <th>Compreede</th>
