--- a/app/views/shared/_formacao_academica.html.erb
+++ b/app/views/shared/_formacao_academica.html.erb
@@ -5,7 +5,7 @@
 <div class = "texto">
     <h3>Formação</h3>
     
-    <table class = "table table-striped">
+    <table class = "table table-striped table-responsive-lg">
         <thead>
             <th>Período</th>
             <th>Instituição</th>
@@ -28,7 +28,7 @@
     <br/>
     <h3>Cursos</h3>
     
-    <table class = "table table-striped">
+    <table class = "table table-striped table-responsive-lg">
         <thead>
             <th>Ano</th>
             <th>Instituição</th>
@@ -56,7 +56,7 @@
     <br/>
     <h3>Trabalhos Acadêmicos</h3>
     
-    <table class = "table table-striped">
+    <table class = "table table-striped table-responsive-lg">
         <thead>
             <th>Ano</th>
             <th>Importância Acadêmica</th>
