--- a/app/views/shared/_historico_profissional.html.erb
+++ b/app/views/shared/_historico_profissional.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class = "texto">
-    <table class = "table table-striped">
+    <table class = "table table-striped table-responsive-lg">
         <thead>
             <th>Período</th>
             <th>Empresa</th>
