--- a/app/views/shared/_cabecalho.html.erb
+++ b/app/views/shared/_cabecalho.html.erb
@@ -1,7 +1,11 @@
 <!-- Cabeçalho -->
 <center>
-    <div class = "titulo">
-        <h3>“This is one of the most important lessons of the scientific method: if you cannot fail, you cannot learn.”</h3>
-            ― Eric Ries, The Lean Startup
+    <div class = "container titulo-imagem">
+        <div class = "row">
+            <div class = "col align-self-end">
+                <h3>“This is one of the most important lessons of the scientific method: if you cannot fail, you cannot learn.”</h3>
+                    ― Eric Ries, The Lean Startup
+             </div>
+        </div>
     </div>
 </center>
