--- a/app/views/serttel/index.html.erb
+++ b/app/views/serttel/index.html.erb
@@ -1,16 +1,17 @@
 <%= render "shared/navbar" %>
 <%= render "shared/cabecalho" %>
-<%= render "info_basica_foto" %>
+<%= render "shared/info_basica" %>
 <%= render "shared/info_basica_sensivel" %>
 
 <div class = "secao">
-    <h2>Quais são meus objetivos na LIVE?</h2>
+    <h2>Quais são meus objetivos na Serttel?</h2>
 </div>
 
 <div class = "texto" align="justify">
-    Na <strong>LIVE</strong> meu objetivo é aprimorar meus conhecimentos em desenvolvimento Engenharia de Software.
+    Na <strong>Serttel</strong> posso atuar tanto como desenvolvedor Android quanto desenvolvedor Web pois tenho interesse nas duas áreas.
     Sou um admirador das novas tecnologias e como elas podem impactar na vida das pessoas, portanto aprender trabalhando com isso é um privilégio para mim.
-    Tenho experiência com Prototipação, Bootstrap, CSS e integração de API.
+    Acredito que a <strong>Serttel</strong> tem uma entrega de valor que faz muito sentido com minha vida e meus valores ao entregar soluções inteligentes para
+    a mobilidade urbana, principalmente por essa ser uma dor não só da sociedade, mas também minha.
 </div>
 
 <%= render "shared/bom" %>
