--- a/app/views/shared/_bom.html.erb
+++ b/app/views/shared/_bom.html.erb
@@ -7,7 +7,7 @@
         <table class = "table table-responsive-lg">
             <thead>
                 <th><center>Android</center></th>
-                <th><center>MySQL</center></th>
+                <th><center>SQL</center></th>
                 <th><center>MVC</center></th>
                 <th><center>GitHub</center></th>
             </thead>
@@ -28,7 +28,7 @@
                     <td align="justify">Tenho experiência de ter lançado um App Android na Play Store como resultado
                     final de um Projeto de Extensão na UFPE.</td>
                     <td align="justify">Quando desenvolvi o LactoRun, usei o SQLite3, além disso estudei OracleSQL,
-                    então por essa experiência terei facilidade em aprender MySQL.</td>
+                    então por essa experiência terei facilidade em aprender e em utilizar qualquer banco de dados estruturado em SQL.</td>
                     <td align="justify">Estou desenvolvendo um projeto em Ruby on Rails com o objetivo de ajudar o
                     público vegano a descobrir se um produto é vegano ou não, e a justificativa. 
                     Nesse projeto usamos a arquitetura MVC.</td>
