--- a/app/views/serttel/index.html.erb
+++ b/app/views/serttel/index.html.erb
@@ -1,7 +1,6 @@
 <%= render "shared/navbar" %>
 <%= render "shared/cabecalho" %>
-<%= render "shared/info_basica" %>
-<%= render "shared/info_basica_sensivel" %>
+<%= render "shared/info_basica_foto" %>
 
 <div class = "secao">
     <h2>Quais são meus objetivos na Serttel?</h2>
@@ -19,4 +18,3 @@
 <%= render "shared/historico_profissional" %>
 <%= render "shared/formacao_academica" %>
 <%= render "shared/idiomas" %>
-<%= render "shared/footer" %>
