--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
   </head>
 
   <body>
-    <div class = "container">
+    <div class = "container bg-branco no-padding">
       <%= yield %>
     </div>
+    
+    <%= render "shared/footer" %>
   </body>
 </html>
