--- a/app/views/live/index.html.erb
+++ b/app/views/live/index.html.erb
@@ -1,7 +1,6 @@
 <%= render "shared/navbar" %>
 <%= render "shared/cabecalho" %>
-<%= render "info_basica_foto" %>
-<%= render "shared/info_basica_sensivel" %>
+<%= render "shared/info_basica_foto" %>
 
 <div class = "secao">
     <h2>Quais são meus objetivos na LIVE?</h2>
@@ -18,4 +17,3 @@
 <%= render "shared/historico_profissional" %>
 <%= render "shared/formacao_academica" %>
 <%= render "shared/idiomas" %>
-<%= render "shared/footer" %>
