--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-green">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark nav-color">
   <div class = "container">
     <!-- Brand e logo -->
-    <a class="navbar-brand" href=<%= root_path%>>Ricarth Lima
+    <a class="navbar-brand" href=<%= root_path%>>
+      <img src="assets/ricarth-foto-redonda.png" width="30" height="30" class="d-inline-block align-top" alt="Ricarth Lima">
     </a>
     
     <!-- Botão Sanduíche -->
