--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,7 @@
 <%= render "shared/navbar" %>
 <%= render "shared/cabecalho" %>
-<%= render "shared/info_basica" %>
-<%= render "justa/bom" %>
+<%= render "shared/info_basica_foto" %>
+<%= render "shared/bom" %>
 <%= render "shared/historico_profissional" %>
 <%= render "shared/formacao_academica" %>
 <%= render "shared/idiomas" %>
-<%= render "shared/footer" %>
