corrigido bug da imagem na nav

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class = "container">
     <!-- Brand e logo -->
     <a class="navbar-brand" href=<%= root_path%>>
-      <img src="assets/ricarth-foto-redonda.png" width="30" height="30" class="d-inline-block align-top" alt="Ricarth Lima">
+      <img src=<%=asset_path('ricarth-foto-redonda.png')%> width="30" height="30" class="d-inline-block align-top" alt="Ricarth Lima">
     </a>
     
     <!-- Botão Sanduíche -->
