adicionada sombra nav

--- a/app/views/shared/_bom.html.erb
+++ b/app/views/shared/_bom.html.erb
@@ -5,7 +5,7 @@
 <div class = "texto">
     <center>
         <table class = "table table-responsive-lg">
-            <thead>
+            <thead class = "nav-color">
                 <th><center>Android</center></th>
                 <th><center>SQL</center></th>
                 <th><center>MVC</center></th>
