--- a/app/views/shared/_historico_profissional.html.erb
+++ b/app/views/shared/_historico_profissional.html.erb
@@ -4,7 +4,7 @@
 
 <div class = "texto">
     <table class = "table table-striped table-responsive-lg">
-        <thead>
+        <thead class = "nav-color">
             <th>Período</th>
             <th>Empresa</th>
             <th>Cargo</th>
