--- a/app/views/shared/_idiomas.html.erb
+++ b/app/views/shared/_idiomas.html.erb
@@ -4,7 +4,7 @@
 
 <div class = "texto">
     <table class = "table table-responsive-lg">
-        <thead>
+        <thead class = "nav-color">
             <th>Idioma</th>
             <th>Compreede</th>
             <th>Fala</th>
