--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,10 @@ body{
     color: #FFFFFF;
 }
 
+.nav-shadow{
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
 .nav-text-color{
     color: #FFFFFF;
 }
