--- a/app/views/shared/_formacao_academica.html.erb
+++ b/app/views/shared/_formacao_academica.html.erb
@@ -6,7 +6,7 @@
     <h3>Formação</h3>
     
     <table class = "table table-striped table-responsive-lg">
-        <thead>
+        <thead class = "nav-color">
             <th>Período</th>
             <th>Instituição</th>
             <th>Formação</th>
@@ -29,7 +29,7 @@
     <h3>Cursos</h3>
     
     <table class = "table table-striped table-responsive-lg">
-        <thead>
+        <thead class = "nav-color">
             <th>Ano</th>
             <th>Instituição</th>
             <th>Curso</th>
@@ -57,7 +57,7 @@
     <h3>Trabalhos Acadêmicos</h3>
     
     <table class = "table table-striped table-responsive-lg">
-        <thead>
+        <thead class = "nav-color">
             <th>Ano</th>
             <th>Importância Acadêmica</th>
             <th>Resultado</th>
