--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark nav-color">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark nav-color nav-shadow">
   <div class = "container">
     <!-- Brand e logo -->
     <a class="navbar-brand" href=<%= root_path%>>
