--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    
+    <%= yield :nav %>
+    
     <div class = "container bg-branco no-padding">
       <%= yield %>
     </div>
