corrigido problema de responsividade foto

--- a/app/views/shared/_info_basica_foto.html.erb
+++ b/app/views/shared/_info_basica_foto.html.erb
@@ -4,10 +4,10 @@
 
 <div class = "container my-4 padding-lados">
     <div class = "row">
-        <div class = "col-md-auto">
-            <%= image_tag "/assets/ricarth-foto-redonda.png", class: "imagem-foto"%>
+        <div class = "col-md-auto my-2">
+            <center><%= image_tag "/assets/ricarth-foto-redonda.png", class: "imagem-foto"%></center>
         </div>
-        <div class = "col">
+        <div class = "col my-2">
             <h3><strong>Ricarth Ruan da Silva Lima</strong></h3>
             <ul class="list-group list-group-flush">
                 <li class = "list-group-item"><strong>Sistemas de Informação - CIn (UFPE)</strong> - 5º Período<br/></li>
