enxutada organizacao de paginas profissionais

--- a/app/views/profissional/justa.html.erb
+++ b/app/views/profissional/justa.html.erb
@@ -15,7 +15,7 @@
     portanto aprender trabalhando com isso é um privilégio para mim.
 </div>
 
-<%= render "bom" %>
+<%= render "shared/bom" %>
 
 <%= render "shared/historico_profissional" %>
 <%= render "shared/formacao_academica" %>
