--- a/app/views/profissional/magnero.html.erb
+++ b/app/views/profissional/magnero.html.erb
@@ -20,7 +20,7 @@
     
 </div>
 
-<%= render "bom" %>
+<%= render "shared/bom" %>
 
 <%= render "shared/historico_profissional" %>
 <%= render "shared/formacao_academica" %>
