--- a/app/assets/stylesheets/pessoal.scss
+++ b/app/assets/stylesheets/pessoal.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the justa controller here.
+// Place all the styles related to the pessoal controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
