--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,8 @@
 @import 'bootstrap';
 
 body{
-    background-color: #f4eafa;
+    //background-color: #f4eafa;
+    background-color: #f4f4f4;
 }
 
 .no-padding{
@@ -97,4 +98,48 @@ img.imagem-logo{
 div.justificado{
     text-align: justify;
     text-justify: inter-word;
+}
+
+// Pessoal
+
+.nav-p-color{
+    background-color: #2d431c;
+}
+
+.p-secao{
+    padding: 1% 3% 1% 3%;
+    background-color: #2d431c;
+    color: #FFFFFF;
+}
+
+.p-texto{
+    padding: 3%;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.p-titulo-imagem{
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 9%;
+    min-height: 300px;
+    
+    color: #FFFFFF;
+    box-shadow: 0px 3px 2px rgba(0,0,0,0.5);
+
+    background-image: url('ricarth-fundo-verde.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center 90%;
+}
+
+.p-footer{
+    padding: 1%;
+    background-color: #2d431c;
+    color: #FFFFFF;
+    font-size: small;
+}
+
+.imagem-perdida{
+    max-width: 70%;
 }
