--- a/app/views/profissional/_navbar.html.erb
+++ b/app/views/profissional/_navbar.html.erb
@@ -29,6 +29,9 @@
       
       <ul class = "navbar-nav">
         <li class="nav-item">
+            <a class="nav-link" href=<%= root_path %>>Site Pessoal</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Site Acadêmico</a>
         </li>
       </ul>
