corrigido pequenos erros

--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -59,13 +59,13 @@
 <div class = "p-texto">
     <center><img src = "/assets/areas-interesse.png" class = "img-fluid imagem-perdida"></center>
     <h5 class = "my-2">Em programação</h5>
-    <p>Python, Android, Rails, Java, Bootstrap, HTML, CSS, JS, Web Apps...</p>
+    <p>Python, Android, Rails, Java, Bootstrap, HTML, CSS, JS e Web Apps.</p>
     
     <h5>Em empreendedorismo</h5>
-    <p>Lean Startup, Metodologias Ágeis, Gestão de Pessoas, Estudo e Resolução de Problemas, Entrega de Valor...</p>
+    <p>Lean Startup, Metodologias Ágeis, Gestão de Pessoas, Estudo e Resolução de Problemas, Entrega de Valor, Marketing Digital e Design Thinking.</p>
     
     <h5>Em design</h5>
-    <p>Experiência do Usuário, Interface do Usuário, Photshop, Premiere, Marketing...</p>
+    <p>Experiência do Usuário, Interface do Usuário, Photshop, Premiere.</p>
 </div>
 
 <%= content_for :footer do%>
