--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -47,8 +47,7 @@
     rumo do Empreendedorismo ou da Educação, ou de ambos. Mas no caso mais simples, sempre tentarei ajudar. Você pode conferir meus conteúdos de programação no 
     <a href = "tinyurl.com/secretplaces2">Secret Places</a> e no meu canal no <a href = "https://www.youtube.com/channel/UCFxy994CuYWRG0HOLBq0gyQ">YouTube</a></p>
     
-    Hoje sou, além de estudante, desenvolvedor no <a href = "http://lactorun.com.br/">LactoRun</a>, estagiário na <a href = "http://www.serttel.com.br/">Serttel</a>, monitor de 
-    <a href = "https://sites.google.com/site/gpnif978/home">Gestão de Processos de Negócio</a>, fundador e desenvolvedor do <a href = "https://evegano.herokuapp.com">É vegano?</a>,
+    Hoje sou, além de estudante, desenvolvedor no <a href = "http://lactorun.com.br/">LactoRun</a>, estagiário na <a href = "http://www.serttel.com.br/">Serttel</a>, fundador e desenvolvedor do <a href = "https://evegano.herokuapp.com">É vegano?</a>,
     fundador e desenvolvedor do aplicativo Little Thinkers e desenvolvedor para a equipe do Privacy Criteria.
 </div>
 
