adicionado milagre da manha

--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -17,6 +17,9 @@
     
     
     <h3 class = "my-2">2019</h2>
+	<ul>
+		<li>O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
+	</ul>
     <h3 class = "my-2">2018 (10)</h2>
         <ul>
             <li>A Startup Enxuta (274 páginas), por Eric Ries (02/10/2018 + n dias)</li>
