--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -14,25 +14,39 @@
     Assim, inspirado no meu professor <a href = "http://viniciusgarcia.me/personalbooks/">Vinicius Garcia</a> (que se inspirou em outro professor meu,
     <a href = "https://sites.google.com/a/cin.ufpe.br/castor/personal/books">Fernando Castor</a>) vou passar a registrar minhas leituras. Para mim, isso serve tanto no sentido
     do que comento na página <a href = <%= oqfev_path %>>O que fiz enquanto vivi?</a>, quanto como registro do meu avanço na leitura. Espero um dia chegar no nível deles haha.
-    
-    
+    <hr>
+    <h2><center>Minhas 5 indicações!</center></h2>
+    <hr>
+    <h2 class = "my-2"><center>Lidos por ano</center></h2>
     <h3 class = "my-2">2019</h2>
 	<ul>
 		<li>O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
 	</ul>
-    <h3 class = "my-2">2018 (10)</h2>
-        <ul>
-            <li>A Startup Enxuta (274 páginas), por Eric Ries (02/10/2018 + n dias)</li>
-            <li>Algoritmos para Viver (529 páginas), por Brian Christian e Tom Griffiths (03/08/2018 + n dias)</li>
-            <li>A Jornada do Escritor (484 páginas), por Christopher Vogler (03/08/2018 + n dias)</li>
-            <li>As cinco linguagens do amor (216 páginas), por Gary Chapman </li>
-            <li>De volta ao mosteiro (192 páginas), por James C. Hunter </li>
-            <li>O caminho para independência financeira (77 páginas), por Diogo Pereira </li>
-            <li>Cave Mais Fundo (310 páginas), por Joshua Harris</li>
-            <li>2001 Uma odisséia no espaço (336 páginas), por Arthur C. Clark</li>
-            <li>Pense como um artista (224 páginas), por Will Gompertz (2017 - 2018)</li>
-            <li><strong>Audiolivro</strong> O pequeno príncipe (160 páginas), por Antoine de Saint-Exupéry </li>
-        </ul>
+	
+    <h3 class = "my-2">2018 (10)</h3>
+    <ul>
+        <li>A Startup Enxuta (274 páginas), por Eric Ries (02/10/2018 + n dias)</li>
+        <li>Algoritmos para Viver (529 páginas), por Brian Christian e Tom Griffiths (03/08/2018 + n dias)</li>
+        <li>A Jornada do Escritor (484 páginas), por Christopher Vogler (03/08/2018 + n dias)</li>
+        <li>As cinco linguagens do amor (216 páginas), por Gary Chapman </li>
+        <li>De volta ao mosteiro (192 páginas), por James C. Hunter </li>
+        <li>O caminho para independência financeira (77 páginas), por Diogo Pereira </li>
+        <li>Cave Mais Fundo (310 páginas), por Joshua Harris</li>
+        <li>2001 Uma odisséia no espaço (336 páginas), por Arthur C. Clark</li>
+        <li>Pense como um artista (224 páginas), por Will Gompertz (2017 - 2018)</li>
+        <li><strong>Audiolivro</strong> O pequeno príncipe (160 páginas), por Antoine de Saint-Exupéry </li>
+    </ul>
+    
+    <h3 class = "my-2">Antes disso...</h3>
+    <ul>
+        <li>O poder do hábito, por Charles Duhigg.</li>
+        <li>O monge e o executivo, por James C. Hunter.</li>
+        <li>Como conquistar as pessoas, por Allan Pease e Barbara Pease.</li>
+        <li>10 faces da inovação, por Thomas Kelley e Jonathan Littman.</li>
+        <li>Você É Inteligente O Bastante Para Trabalhar No Google?, por William Poundstone.</li>
+        <li>O homem mais rico da Babilônia, por George S Clason.</li>
+    </ul>
+    
 </div>
 
 <%= content_for :footer do%>
