--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -21,6 +21,7 @@
     <h3 class = "my-2">2019</h2>
 	<ul>
 		<li>O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
+		<li>O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
 	</ul>
 	
     <h3 class = "my-2">2018 (10)</h3>
