PERSONAL: Adicionado Os 7 hábitos das pessoas vrau

--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -21,7 +21,8 @@
     <h3 class = "my-2">2019</h2>
 	<ul>
 		<li>O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
-		<li>O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
+        <li>O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
+        <li>[Pocket Edition] Os 7 hábitos das pessoas altamente eficazes (77 páginas), por Stephen R. Covey (26/03/2019)</li>
 	</ul>
 	
     <h3 class = "my-2">2018 (10)</h3>
