PERSONAL: Adicionado homem aranha de volta ao lar

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -32,6 +32,7 @@
         <li>Como Treinar Seu Dragão 3</li>
         <li>Alita - Maquina de Combate</li>
         <li>Capitã Marvel</li>
+        <li>Spider man - Homecoming</li>
     </ul>
     
     <h5>Séries:</h5>
