PERSONAL: Adicionado dois filmes

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -33,6 +33,8 @@
         <li>Alita - Maquina de Combate</li>
         <li>Capitã Marvel</li>
         <li>Spider man - Homecoming</li>
+        <li>Vingadores - Ultimato</li>
+        <li>Até o último homem</li>
     </ul>
     
     <h5>Séries:</h5>
