PERSONAL: Adicionados filmes e livros

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -35,11 +35,13 @@
         <li>Spider man - Homecoming</li>
         <li>Vingadores - Ultimato</li>
         <li>Até o último homem</li>
+        <li>Jumanji - Bem-vindo à Selva</li>
     </ul>
     
     <h5>Séries:</h5>
     <ul>
         <li>Shooter (Netflix) - S01</li>
+        <li>Game of Thrones - S08</li>
     </ul>
     
     <h5>Animes:</h5>
