--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -23,6 +23,7 @@
 		<li>O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
         <li>O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
         <li>[Pocket Edition] Os 7 hábitos das pessoas altamente eficazes (77 páginas), por Stephen R. Covey (26/03/2019)</li>
+        <li>Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
 	</ul>
 	
     <h3 class = "my-2">2018 (10)</h3>
