--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -36,6 +36,7 @@
         <li>Vingadores - Ultimato</li>
         <li>Até o último homem</li>
         <li>Jumanji - Bem-vindo à Selva</li>
+        <li>Aladdin (2019)</li>
     </ul>
     
     <h5>Séries:</h5>
