devise e coiso implementados

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -113,8 +113,8 @@
                 </ul>
         </div>
     </div>
-    
-    
-    
-
 </div>
+
+<%= content_for :footer do%>
+    <%= render "footer" %>
+<% end %>
