--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,10 @@ body{
     background-color: #f4f4f4;
 }
 
+.mt-sm{
+    margin-top: 5px;
+}
+
 .no-padding{
     padding: 0px;
 }
@@ -142,4 +146,18 @@ div.justificado{
 
 .imagem-perdida{
     max-width: 70%;
+}
+
+.text-light{
+    color: #A9D0C6;
+}
+
+.item-carrosel{
+    background: #18280b; 
+    height: 600px; 
+    padding-top: 30px;
+}
+
+.img-carrosel{
+    max-height: 500px;
 }
