--- a/app/views/pessoal/wishlist.html.erb
+++ b/app/views/pessoal/wishlist.html.erb
@@ -5,7 +5,27 @@
 <div class = "p-texto">
     <h1>Lista de Presentes</h1><br/>
     
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <small>
+        <strong>Nível de desejo:</strong>
+        <img height = "15" src = <%= "/assets/loves/love0.png"%>>
+        <%= wishlevel(0) %>
+        |
+        <img height = "15" src = <%= "/assets/loves/love1.png"%>>
+        <%= wishlevel(1) %>
+        |
+        <img height = "15" src = <%= "/assets/loves/love2.png"%>>
+        <%= wishlevel(2) %>
+        |
+        <img height = "15" src = <%= "/assets/loves/love3.png"%>>
+        <%= wishlevel(3) %>
+        |
+        <img height = "15" src = <%= "/assets/loves/love4.png"%>>
+        <%= wishlevel(4) %>
+        |
+        <img height = "15" src = <%= "/assets/loves/love5.png"%>>
+        <%= wishlevel(5) %>
+    </small>
+    <div id="carouselExampleIndicators" class="carousel slide mt-sm" data-ride="carousel" data-interval="7000">
       <ol class="carousel-indicators">
           <% for i in 0..(@gifts.length-1) %>
               <li data-target="#carouselExampleIndicators" data-slide-to=<%=i%> class="active"></li>
@@ -19,7 +39,21 @@
             <% else %>
                 <div class="carousel-item item-carrosel">
             <% end %>
-              <center><img class="image-fluid img-carrosel" src=<%= gift.url_image %> alt=<%= gift.name %>></center>
+              <center>
+                  <img class="image-fluid img-carrosel" src=<%= gift.url_image %> alt=<%= gift.name %>>
+                  <div class="carousel-caption caption-carrosel">
+                      <h5><%= gift.name %></h5>
+                      <p><%= gift.description %></p>
+                      <hr style = "border-color: #FFFFFF66; width: 20%;">
+                      <p>
+                          <img height = "25" src = <%= "/assets/loves/love" + gift.wishlevel.to_s + ".png"%>>
+                          <%= wishlevel(gift.wishlevel) %>
+                      </p>
+                      <p>
+                          <a class = "btn btn-success" target = "_blank" href = <%=gift.url_prod%>><i class="fas fa-shopping-cart"></i>    <%=number_to_currency(gift.price, unit: "R$", separator: ",", delimiter: "")%></a>
+                      </p>
+                  </div>
+              </center>
             </div>
         <% end %>
       </div>
@@ -33,35 +67,9 @@
       </a>
     </div>
 
+    </div>
 </div>
-<hr><hr>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Wishlevel</th>
-      <th>Price</th>
-      <th>Description</th>
-      <th>Url image</th>
-      <th>Url prod</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @gifts.each do |gift| %>
-      <tr>
-        <td><%= gift.name %></td>
-        <td><%= gift.wishlevel %></td>
-        <td><%= gift.price %></td>
-        <td><%= gift.description %></td>
-        <td><%= gift.url_image %></td>
-        <td><%= gift.url_prod %></td>
-        <td><%= gift.active %></td>
-    <% end %>
-  </tbody>
-</table>
 
 <%= content_for :footer do%>
     <%= render "footer" %>
