wish: adicionada ordenacao e textos

--- a/app/views/pessoal/wishlist.html.erb
+++ b/app/views/pessoal/wishlist.html.erb
@@ -2,8 +2,18 @@
   <%= render "pessoal/navbar" %>
 <% end %>
 
+<img src = "/assets/gifts.jpg" class = "img-fluid">
+
 <div class = "p-texto">
-    <h1>Lista de Presentes</h1><br/>
+    <h1>Lista de Presentes</h1>
+    
+    <p>
+      Quem me conhece sabe que eu prefiro ser surpreendido. Porém, se você está totalmente perdido
+      em relação aos meus gostos, esse pode ser um bom ponto de partida. Além disso ter uma wishlist
+      é importante para manter o foco nas coisas que eu mesmo quero comprar.
+    </p>
+    
+    <br/>
     
     <small>
         <strong>Nível de desejo:</strong>
@@ -66,7 +76,12 @@
         <span class="sr-only">Próximo</span>
       </a>
     </div>
-
+    
+    <p>
+      <br/>
+      <strong>Aviso para você e para mim:</strong><br/>
+      Nunca compre nada que você não pode pagar.
+    </p>
     </div>
 </div>
 
