--- a/app/views/pessoal/wishlist.html.erb
+++ b/app/views/pessoal/wishlist.html.erb
@@ -50,7 +50,7 @@
                 <div class="carousel-item item-carrosel">
             <% end %>
               <center>
-                  <img class="image-fluid img-carrosel" src=<%= gift.url_image %> alt=<%= gift.name %>>
+                  <img class="img-fluid img-carrosel" src=<%= gift.url_image %> alt=<%= gift.name %>>
                   <div class="carousel-caption caption-carrosel">
                       <h5><%= gift.name %></h5>
                       <p><%= gift.description %></p>
