adicinado grid wishlist

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -163,6 +163,11 @@ div.justificado{
     max-width: 90vw;
 }
 
+.img-grid{
+    max-height: 250px;
+    max-width: auto;
+}
+
 .caption-carrosel{
     background: #00000026; 
     margin-top: 20px;
