--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -37,6 +37,7 @@
         <li>Até o último homem</li>
         <li>Jumanji - Bem-vindo à Selva</li>
         <li>Aladdin (2019)</li>
+        <li>Toy Story 4</li>
     </ul>
     
     <h5>Séries:</h5>
