--- a/app/views/pessoal/wishlist.html.erb
+++ b/app/views/pessoal/wishlist.html.erb
@@ -85,7 +85,7 @@
     </p>
     
     <hr>
-    <div class = "row align-items-center">
+    <div class = "row align-items-center justify-content-center justify-content-md-around">
       <% loop do %>
         <div class = "col align-self-center grid-col">
           <center>
