PERSONAL: Adicional Turma da Mônica Laços

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -38,6 +38,7 @@
         <li>Jumanji - Bem-vindo à Selva</li>
         <li>Aladdin (2019)</li>
         <li>Toy Story 4</li>
+	<li>Turma da Mônica - Laços</li>
     </ul>
     
     <h5>Séries:</h5>
