Atualizado coisas que vivi

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -21,6 +21,10 @@
     <!-- 2019 -->
     <h2>2019</h2>
     <h5>Games:</h5>
+    <ul>
+        <li>The Awesome Adventures of Captain Spirit</li>
+        <li>A Jornada - FIFA19</li>
+    </ul>
     
     <h5>Filmes:</h5>
     <ul>
@@ -32,19 +36,22 @@
         <li>Como Treinar Seu Dragão 3</li>
         <li>Alita - Maquina de Combate</li>
         <li>Capitã Marvel</li>
-        <li>Spider man - Homecoming</li>
+        <li>Spiderman - Homecoming</li>
         <li>Vingadores - Ultimato</li>
         <li>Até o último homem</li>
         <li>Jumanji - Bem-vindo à Selva</li>
         <li>Aladdin (2019)</li>
         <li>Toy Story 4</li>
-	<li>Turma da Mônica - Laços</li>
+        <li>Turma da Mônica - Laços</li>
+        <li>Rei Leão (2019)</li>
     </ul>
     
     <h5>Séries:</h5>
     <ul>
         <li>Shooter (Netflix) - S01</li>
         <li>Game of Thrones - S08</li>
+        <li>Dark - S02</li>
+        <li>Stranger Things - S03</li>
     </ul>
     
     <h5>Animes:</h5>
@@ -58,7 +65,7 @@
         <div class = "col">
             <h5>Games (3)</h5>
                 <ul>
-                    <li>Life is Strange </li>
+                    <li>Life is Strange</li>
                     <li>Forza Horizon 3 - DEMO </li>
                     <li>Father and Son</li>
                 </ul>
