--- a/app/views/pessoal/_navbar.html.erb
+++ b/app/views/pessoal/_navbar.html.erb
@@ -39,7 +39,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Site Acadêmico</a>
+          <a class="nav-link" href=<%=p_path%>>Site Profissional</a>
         </li>
         
         <% if user_signed_in? %>
