--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@
 body{
     //background-color: #f4eafa;
     background-color: #f4f4f4;
+    font-family: 'Libre Franklin', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Oswald', sans-serif;
 }
 
 .mt-sm{
