--- a/app/views/pessoal/_navbar.html.erb
+++ b/app/views/pessoal/_navbar.html.erb
@@ -20,7 +20,7 @@
           <a class="nav-link" href=<%= desafios_path %>>Desafios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href=<%= livros_path %>>Livros Pessoais</a>
+          <a class="nav-link" href=<%= livros_path %>>Livros</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href=<%=oqfev_path%>>O que fiz enquanto vivi?</a>
@@ -29,10 +29,10 @@
       
       <ul class = "navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href=<%=profissional_path%>>Site Profissional</a>
+            <a class="nav-link" href=<%=profissional_path%>>Profissional</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Site Acadêmico</a>
+            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Acadêmico</a>
         </li>
       </ul>
     </div>
