--- a/app/views/pessoal/_navbar.html.erb
+++ b/app/views/pessoal/_navbar.html.erb
@@ -33,11 +33,11 @@
       <ul class = "navbar-nav">
 
         <li class="nav-item">
-            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Acadêmico</a>
+            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial" target = "_blank">Acadêmico</a>
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href=<%=profissional_path%>>Profissional</a>
+          <a class="nav-link" target="_blank" href=<%=profissional_path%>>Profissional</a>
         </li>
         
         <% if user_signed_in? %>
@@ -46,7 +46,9 @@
               <i class="fas fa-cog"></i>
             </button>
             <div class="mt-sm dropdown-menu dropdown-menu-right nav-p-color text-light" aria-labelledby="dropdownMenuButton">
-              <% if can? :manage, Gift %><a class="dropdown-item text-light" href=<%=gifts_path%>>Gifts</a><%end%>
+              <% if can? :manage, Gift %>
+                <a class="dropdown-item text-light" href=<%=gifts_path%>>Gifts</a>
+              <%end%>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item text-light" href=<%=edit_user_registration_path%>>Editar Perfil</a>
               <a class="dropdown-item text-light" data-method="delete" href=<%=destroy_user_session_path%>>Sair</a>
@@ -54,10 +56,11 @@
           </div>
         <% else %>
           <li class="nav-item">
-          <a class="nav-link" href=<%= new_user_session_path%>>Login</a>
-        </li>
+            <a class="nav-link" href=<%= new_user_session_path%>>Login</a>
+          </li>
         <% end %>
       </ul>
+      
     </div>
     
   </div>
